@@ -36,9 +36,6 @@
 
 #include <gconf/gconf-client.h>
 
-#include <libgnomeui/gnome-help.h>
-#include <libgnome/gnome-desktop-item.h>
-
 #include "applet.h"
 #include "keys.h"
 #include "preferences.h"
@@ -703,22 +700,10 @@ gnome_volume_applet_toggle_mute (GnomeVolumeApplet *applet)
 void
 gnome_volume_applet_run_mixer (GnomeVolumeApplet *applet)
 {
-  GnomeDesktopItem *ditem;
   GError *error = NULL;
 
-  if ((ditem = gnome_desktop_item_new_from_basename ("gnome-volume-control.desktop", 0, NULL))) {
-    gnome_desktop_item_set_launch_time (ditem, gtk_get_current_event_time ());
-    gnome_desktop_item_launch_on_screen (ditem, NULL,
-	                                 GNOME_DESKTOP_ITEM_LAUNCH_ONLY_ONE,
-					 gtk_widget_get_screen (GTK_WIDGET (applet)),
-					 -1, &error);
-    gnome_desktop_item_unref (ditem);
-  }
-  else {
-    gdk_spawn_command_line_on_screen (
-	      gtk_widget_get_screen (GTK_WIDGET (applet)),
-	      "gnome-volume-control", &error);
-  }
+  gdk_spawn_command_line_on_screen (gtk_widget_get_screen (GTK_WIDGET (applet)),
+				    "gnome-volume-control", &error);
 
   if (error) {
     GtkWidget *dialog;
@@ -1380,9 +1365,10 @@ cb_verb (BonoboUIComponent *uic,
   } else if (!strcmp (verbname, "Help")) {
     GError *error = NULL;
 
-    gnome_help_display_on_screen ("mixer_applet2", NULL,
-				  gtk_widget_get_screen (GTK_WIDGET (applet)),
-				  &error);
+    gtk_show_uri (gtk_widget_get_screen (GTK_WIDGET (applet)),
+		  "ghelp:mixer_applet2",
+		  gtk_get_current_event_time (),
+		  &error);
 
     if (error) {
       GtkWidget *dialog;
