@@ -1,8 +1,9 @@
 2009-01-27  Callum McKenzie  <callum@spooky-possum.org>
 
-	* preferences.c: 
+	* preferences.[ch]: 
 	* load.c:
-	* applet.c: Remove gstreamer 0.8 support.
+	* applet.[ch]: Remove gstreamer 0.8 support. Remove libgnome
+	stuff.
 
 ==================== 2.25.2 ======================
 
